# cppmangle

./: .gitignore  API docs.md  CMakeLists.txt  LICENSE  Makefile  README.md  allocator.c  allocator.h  const nonsense  cppmangle.h  cpptypes.c  cpptypes.h  demangle.c  hello_world.c  interface.c  mangle.c  mangling_unit_tests  mangling_unit_tests.c  substitutions.c
